--- a/WebServices/Site.Master
+++ b/WebServices/Site.Master
@@ -78,6 +78,8 @@
 
                         <asp:PlaceHolder ID="logout" Visible="false" runat="server">
                             <div class="right-top-bar flex-w h-full" style="cursor: pointer; color: #efe1e1;">
+                                <a id="updatePreferencesLink" onclick="logout();" class="flex-c-m trans-04 p-lr-25">Logout
+                                </a>
 
                                 <a id="LogoutLink" onclick="logout();" class="flex-c-m trans-04 p-lr-25">Logout
                                 </a>
