--- a/WebServices/Site.Master
+++ b/WebServices/Site.Master
@@ -254,7 +254,7 @@
             function openModalNotifications() {
                 jQuery.ajax({
                     type: "GET",
-                    url: baseUrl + "/api/store/getAllStores",
+                    url: baseUrl + "/api/user/getAllStoresUnderUser",
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     success: function (response) {
